# wordle-algorithm

./: Cargo.toml  README.md
.github/workflows/: tests.yml
benches/: normal-guess.rs
src/: lib.rs
tests/: integration-tests.rs
